# backprop

./: .gitignore  README.md  pyproject.toml
graph/: graph
src/: graph.py  main.py  matplotlib_test.py  mlp.py  value.py
