[project]
name = "backprop"
version = "0.1.0"
description = ""
authors = [{ name = "Kyle Doidge", email = "kyle.blue.doidge@gmail.com" }]
requires-python = "==3.12.9"
readme = "README.md"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
